--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -17,4 +17,18 @@
       </p>
       <%= link_to "← Back to restaurants", restaurants_path, class: "btn btn-outline-primary" %>
     </div>
+
+    <p><strong>Reviews</strong></p>
+    <ul class="list-group">
+      <% @restaurant.reviews.each do |review| %>
+        <li class="list-group-item">
+          ⭐ <strong><%= review.rating %>/5</strong><br>
+          <%= review.content %>
+        </li>
+      <% end %>
+    </ul>
+  <br>
+<%= link_to "Ecrire un avis", new_restaurant_review_path(@restaurant), class: "btn btn-outline-primary" %>
+
+
   </div>
